Imports have been corrected and now visible on the port

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,6 +1,7 @@
-
-.light {
-    color: black;
+.Light {
+    width:100px;
+    height: 100px;
+    background-color: black;
 }
 
 .greenlight {
